opam-version: "2.0"
name: "bitpack_serializer"
version: "0.1.0"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
synopsis:"This library provides functions for encoding efficiently simple OCaml data."
description:"The library provides two main modules.
- Buffer: defines buffers for writing and reading compressed data.
- Lens: an easy to use API for easily defining encoders and decoders.
"
authors: ["Steven de Oliveira <de.oliveira.steven@gmail.com>"]
maintainer: ["Steven de Oliveira <de.oliveira.steven@gmail.com>"]
homepage:"https://ocamlpro.github.io/bitpack_serializer/bitpack_serializer/index.html"
bug-reports:"https://https://github.com/OCamlPro/bitpack_serializer/issues"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7.0"}
  "zarith" {>= "1.10"}
  "ppx_inline_test" {with-test}
  "ppx_expect" {with-test}
  "odoc" {with-doc}
  "ocamlformat" {with-test}
]
